<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectV1</string>
    <string name="menu_settings">Settings</string>
    <string name="add_booking">Add a new booking</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="menu">Menu</string>
    <string name="title_activity_menu">Menu</string>
    <string name="menu_message">What would you like to do?</string>
    <string name="change_prefs">Change preferences</string>
    <string name="title_activity_add_booking">Add_booking</string>
    <string name="back">Back</string>
    <string name="English">English</string>
    <string name="Gaeilge">Gaeilge</string>
    <string name="update">Update</string>
    <string name="enter_pass">Enter password</string>
    <string name="title_activity_password_prompt">PasswordPrompt</string>
    <string name="submit">Submit</string>
    <string name="main_pass_prompt">Please enter your password.</string>
    <string name="time">Time</string>
    <string name="Pressback">Press to go Back</string>
    <string name="PressBackScreen">Press to go Back a Screen</string>
    <string name="RoomName">Room Name</string>
    <string name="EnterRoomName">Enter Room Name</string>
    <string name="URLforNewBooking">URL for New Booking</string>
    <string name="EnterURLforNewBooking">Enter URL for New Booking</string>
    <string name="URLforiCalendar">URL for iCalendar</string>
    <string name="EnterURLforiCalendar">Enter URL for iCalendar</string>
    <string name="TimeinminutesforiCalendarrefresh">Time in minutes for iCalendar refresh</string>
    <string name="EnterTimeinminutesforiCalendarrefresh">Enter time in minutes for iCalendar refresh</string>
    <string name="ForceiCalendarrefresh">Force iCalendar refresh</string>
    <string name="Passwordforpreferences">Password for preferences</string>
    <string name="EnterPasswordforpreferences">Enter Password for preferences</string>
    <string name="StartTime">Start Time</string>
    <string name="EnterStartTime">Select Start Time</string>
    <string name="FinishTime">Finish Time</string>
    <string name="EnterFinishTime">Select Finish Time</string>
    <string name="SendReports">Send Reports</string>
    <string name="Enableordisablesendreports">Enable or disable send reports</string>
    <string name="title_activity_display_details">Display Details</string>
    <string name="passwordNotSet">No password has been set. The default value is \'default\'. Please use the preferences to set a password.</string>
    <string name="The_room_is_currently_free">The room is currently free.</string>
    <string name="Starting">Starting</string>
    <string name="roomFreeAtThatTime">The room is free at that time.</string>
    <string name="booking_desc">Please scan the QR code provided</string>

</resources>