<?xml version="1.0" encoding="utf-8"?>
	 
	<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	 
	 
     <Preference android:title="@string/Pressback"
                android:key="backButtons"
                android:summary="@string/PressBackScreen"/>

	 
	        <EditTextPreference
	            android:key="room"
	            android:title="@string/RoomName"
	            android:summary="@string/EnterRoomName"
	            android:dialogTitle="@string/RoomName"
	            android:dialogMessage="@string/RoomName"   
	            android:defaultValue="B108" />

	        <EditTextPreference
	            android:key="urlNewBooking"
	            android:title="@string/URLforNewBooking"
	            android:summary="@string/EnterURLforNewBooking"
	            android:dialogTitle="@string/URLforNewBooking"
	            android:dialogMessage="@string/EnterURLforNewBooking"
	            android:defaultValue="Default url" />

	        <EditTextPreference
	            android:key="urliCalendar"
	            android:title="@string/URLforiCalendar"
	            android:summary="@string/EnterURLforiCalendar"
	            android:dialogTitle="@string/URLforiCalendar"
	            android:dialogMessage="@string/EnterURLforiCalendar"   
	            android:defaultValue="Default url" />

	        <EditTextPreference
	            android:key="timeForRefresh"
	            android:title="@string/TimeinminutesforiCalendarrefresh"
	            android:summary="@string/EnterTimeinminutesforiCalendarrefresh"
	            android:dialogTitle="@string/TimeinminutesforiCalendarrefresh"
	            android:dialogMessage="@string/EnterTimeinminutesforiCalendarrefresh"   
	            android:defaultValue="15" />

	        <Preference android:title="@string/ForceiCalendarrefresh"
                android:key="refresh"
                android:summary="@string/ForceiCalendarrefresh"/>
	        
	        <EditTextPreference
	            android:key="password"
	            android:title="@string/Passwordforpreferences"
	            android:summary="@string/EnterPasswordforpreferences"
	            android:dialogTitle="@string/Passwordforpreferences"
	            android:dialogMessage="@string/EnterPasswordforpreferences"   
	            android:defaultValue="1234" />
	            
	        <ListPreference
	            android:key="startTime"
	            android:title="@string/StartTime"
	            android:summary="@string/EnterStartTime"
	            android:defaultValue="8:00"
	            android:entries="@array/Interval"
	            android:entryValues="@array/IntervalValues"
	        />   

	        <ListPreference
	            android:key="finishTime"
	            android:title="@string/FinishTime"
	            android:summary="@string/EnterFinishTime"
	            android:defaultValue="18:00"
	            android:entries="@array/Interval"
	            android:entryValues="@array/IntervalValues"
	        />   
	 
	</PreferenceScreen>
		