<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu" >

    <TextView
        android:id="@+id/menu_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="71dp"
        android:text="@string/menu_message" />

    <Button
        android:id="@+id/book_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/menu_message"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="74dp"
        android:text="@string/add_booking"
        android:onClick="buttonClick" />

    <Button
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/book_room"
        android:layout_alignBottom="@+id/book_room"
        android:layout_alignRight="@+id/back_from_menu"
        android:text="@string/change_prefs"
        android:onClick="buttonClick" />

    <Button
        android:id="@+id/back_from_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="15dp"
        android:text="@string/back"
        android:onClick="buttonClick" />

</RelativeLayout>